<resources>
    <string name="app_name">FawazMovieDB</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="title_activity_movie__detail">Movie_Detail</string>
    <string name="naLabel">Not Available</string>
    <string name="release_date_label"><u>Released On</u>:</string>
    <string name="synopsis_label"><u>Synopsis</u> :</string>
    <string name="trailer_label"><u>Trailers</u> :</string>
    <string name="review_label"><u>Reviews</u> :</string>
    <string name="author_label"><i>Author</i> :</string>
    <string name="content_description_image">Movie Image</string>

    <string name="option_sort_title">Sort By</string>
    <string name="option_sort_key">sort</string>
    <string name="option_sort_popularity_label">Popularity</string>
    <string name="option_sort_rating_label">Rated</string>
    <string name="option_sort_favorite_label">Favorites</string>


    <string name="option_sort_popularity_value">popularity.desc</string>
    <string name="option_sort_rating_value">vote_average.desc</string>
    <string name="option_sort_favorite_value">fav</string>
</resources>
