<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackgroundDetail"
    tools:context=".MovieDetailFragment"
    tools:showIn="@layout/activity_movie_detail">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_gravity="start">


    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_alignParentTop="true">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/favCheckBox"
                android:layout_gravity="center_vertical"
                android:button="@drawable/favorite"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textColor="@color/colorBackgroundDetail"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/movie_item_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_image"
                />

        </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naLabel"
        android:id="@+id/OverViewText"
        android:layout_below="@+id/synopsis_label_TextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naLabel"
        android:id="@+id/dateTextView"
        android:layout_margin="4dp"
        android:layout_below="@+id/ratingTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
 />


    <TextView
        style="@style/CustomLabelStyle"
        android:text="@string/release_date_label"
        android:id="@+id/release_date_label_TextView"
        android:layout_below="@+id/ratingTextView"
        android:layout_alignBaseline="@+id/dateTextView"
        android:layout_toLeftOf="@+id/dateTextView"
        android:layout_toStartOf="@id/dateTextView"/>

    <TextView
        style="@style/CustomLabelStyle"
        android:text="@string/synopsis_label"
        android:id="@+id/synopsis_label_TextView"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/dateTextView"
 />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/naLabel"
        android:layout_margin="5dp"
        android:id="@+id/ratingTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/titleLayout"
 />


        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleSmall"
            android:id="@+id/movieRatingBar"
            android:layout_margin="5dp"
            android:numStars="10"
            android:stepSize="0.5"
            android:layout_toLeftOf="@+id/ratingTextView"
            android:layout_toStartOf="@id/ratingTextView"
            android:layout_below="@+id/titleLayout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailer_label"
            style="@style/CustomLabelStyle"
            android:id="@+id/trailerLabelTextView"
            android:layout_below="@+id/OverViewText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/trailerLabelTextView"
            android:id="@+id/trailerLayout">
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomLabelStyle"
            android:text="@string/review_label"
            android:id="@+id/reviewLabelTextView"
            android:layout_below="@+id/trailerLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/reviewLabelTextView"
            android:id="@+id/reviewLayout">

        </LinearLayout>



    </RelativeLayout>

    </ScrollView>
</FrameLayout>
